Sun May 13 21:10:38 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * etc/dds.doxygen:

          Fixed the Doxygen config to pick up all library source files.

Fri May 11 16:25:43 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * etc:
        * etc/dds.doxygen:

          Added a Doxygen configuration file for DDS.

Fri May 11 14:41:01 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * bin/dcps_tests.lst:

          Re-enabled the Reconnect test.

        * tests/DCPS/BuiltInTopicTest/run_test.pl:
        * tests/DCPS/DcpsIntegration/run_test-integration.pl:
        * tests/DCPS/Reconnect/run_test.pl:
        * tests/DCPS/TransientLocalTest/run_test.pl:
        * tests/DCPS/unit/run_test.pl:

          Reverted some of my changes from...
          Thu May 10 14:50:47 UTC 2007  Adam Mitz  <mitza@ociweb.com>
          ...it turns out that the redirected STDERR or STDOUT needs to be
          closed before STDERR or STDOUT is re-opened.  The part of yesterday's
          change that remains is that the "saved" streams are not closed.

Fri May 11 14:01:18 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        Changes to allow BIT functionality in static builds (for now anyway,
        BIT always uses SimpleTCP as its transport implementation).

        * dds/DCPS/transport/simpleTCP/SimpleTcp.cpp:

          Initialize the Loader object in the ACE Service Configurator.

        * dds/InfoRepo/DCPSInfoRepo.cpp:
        * dds/InfoRepo/DCPSInfoRepo.mpc:
        * dds/InfoRepo/DCPSInfoRepo_bits.mpb:

          Link the SimpleTCP library and initialize it as long as the MPC
          feature built_in_topics = 1.

        * tests/DCPS/BuiltInTopic/BuiltInTopic.mpc:
        * tests/DCPS/BuiltInTopic/main.cpp:

          Modified to work in static builds.

Thu May 10 14:50:47 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * tests/DCPS/BuiltInTopicTest/run_test.pl:
        * tests/DCPS/DcpsIntegration/run_test-integration.pl:
        * tests/DCPS/Reconnect/run_test.pl: