@@ -8,7 +8,11 @@
 DCPS_SimpleTcp_Initializer::DCPS_SimpleTcp_Initializer (void)
 {
   ACE_Service_Config::process_directive (ace_svc_desc_DCPS_SimpleTcpLoader);
-  ACE_Service_Config::process_directive (ACE_TEXT ("static "
-                                                   "DCPS_SimpleTcpLoader "
-                                                   "\"-type SimpleTcp\""));
+
+  //This was added for static builds but is causing problems from non-static
+  //builds.  Disabling for now.  The static build may need to use -ORBSvcConf
+  //with a static directive to work-around.
+  //ACE_Service_Config::process_directive (ACE_TEXT ("static "
+  //                                                 "DCPS_SimpleTcpLoader "
+  //                                                 "\"-type SimpleTcp\""));
 }
